[package]
name = "egui-sfml"
version = "0.3.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2021"
description = "egui integration for rust-sfml"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-sfml"
repository = "https://github.com/crumblingstatue/egui-sfml"

[dependencies]
egui = "0.20"
glu-sys = "0.1.4"

[dependencies.sfml]
version = "0.20.0"
default-features = false
features = ["graphics"]

[dev-dependencies]
egui_demo_lib = "0.20"
